fix: applying custom drag and drop styles only on mobile

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -9,7 +9,8 @@ body {
   background: #f0f0f0;
   font-family: "Roboto", sans-serif;
 
-  button, .link-btn {
+  button,
+  .link-btn {
     background: var(--green);
     border-radius: 10px;
     outline: none;
@@ -31,7 +32,7 @@ body {
     }
   }
 
-  .link-btn{
+  .link-btn {
     text-decoration: none;
   }
 
@@ -100,12 +101,15 @@ body {
     font-size: 12px;
   }
 
-  .draggable-wrapper, .dropabble-wrapper{
-    display: flex;
-    flex-direction: column;
-    min-width: 100%;
-    align-items: center;
-    justify-content: center;
+  .draggable-wrapper,
+  .dropabble-wrapper {
+    @media (max-width: 540px) {
+      display: flex;
+      flex-direction: column;
+      min-width: 100%;
+      align-items: center;
+      justify-content: center;
+    }
   }
 
   .container {
